--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,7 @@ services:
     ports:
       - 3000:3000
     restart: always
+    volumes:
+      - ~/docker_storage/wakapi:/data
     environment:
-      WAKAPI_DB_TYPE: "postgres"
-      WAKAPI_DB_NAME: "wakapi"
-      WAKAPI_DB_USER: "wakapi"
-      WAKAPI_DB_PASSWORD: "CHANGE_ME!!!"
-      WAKAPI_DB_HOST: "db"
-      WAKAPI_DB_PORT: "5432"
       ENVIRONMENT: "prod"
-
-  db:
-    image: postgres:12.3
-    environment:
-      POSTGRES_USER: "wakapi"
-      POSTGRES_PASSWORD: "CHANGE_ME!!!"
-      POSTGRES_DB: "wakapi"
